--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -111,7 +111,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:7;
 allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:910:1400:107::2;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -124,7 +123,6 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::2;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c07::f03c:94ff:fe12:513e;
-allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
@@ -136,8 +134,13 @@ allow 2602:fc24:12:4870:39ca:318:0:1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
 allow 2602:fc24:18:148f::1;
+allow 2602:fc24:18:149a::1;
 allow 2602:fc24:18:1be9::1;
 allow 2602:fc24:18:1c54::1;
+allow 2602:fc24:18:2ed8::1;
+allow 2602:fc24:18:96e5::1;
+allow 2602:fc24:18:cb10::1;
+allow 2602:fc24:18:d21a::1;
 allow 2602:fccf:310:1::a;
 allow 2602:fccf:310:1::b;
 allow 2602:fef9:100:1100::199;
@@ -281,7 +284,6 @@ allow 2620:18c:0:192::227;
 allow 2620:18c:0:192::228;
 allow 2620:18c:0:192::229;
 allow 2620:59:a000:9666:216:3eff:fe7d:dae8;
-allow 2620:7:6001::120;
 allow 2620:95:4007::111;
 allow 2800:ba0:6:c1::4858;
 allow 2a00:1169:110:2990::;
@@ -297,7 +299,6 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
-allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -688,6 +689,7 @@ allow 2a12:5940:c80b::2;
 allow 2a12:5940:c814::2;
 allow 2a12:5940:c826::2;
 allow 2a12:5940:d0e2::2;
+allow 2a12:5940:f0a8::2;
 allow 2a12:8641:3:12::;
 allow 2a12:8641:3:24::;
 allow 2a12:a800:2:1:45:138:16:203;
