--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,7 +5,6 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -191,7 +190,6 @@ set_real_ip_from 173.249.57.253;
 set_real_ip_from 173.255.255.215;
 set_real_ip_from 175.214.127.6;
 set_real_ip_from 176.118.193.33;
-set_real_ip_from 176.121.81.51;
 set_real_ip_from 176.126.253.190;
 set_real_ip_from 176.58.100.98;
 set_real_ip_from 176.58.121.177;
@@ -236,6 +234,7 @@ set_real_ip_from 185.100.85.24;
 set_real_ip_from 185.100.85.25;
 set_real_ip_from 185.100.87.136;
 set_real_ip_from 185.100.87.139;
+set_real_ip_from 185.100.87.174;
 set_real_ip_from 185.100.87.192;
 set_real_ip_from 185.100.87.250;
 set_real_ip_from 185.100.87.253;
@@ -560,6 +559,7 @@ set_real_ip_from 191.101.31.57;
 set_real_ip_from 191.252.92.147;
 set_real_ip_from 192.210.255.181;
 set_real_ip_from 192.42.116.13;
+set_real_ip_from 192.42.116.14;
 set_real_ip_from 192.42.116.15;
 set_real_ip_from 192.42.116.17;
 set_real_ip_from 192.42.116.173;
@@ -670,7 +670,6 @@ set_real_ip_from 198.46.166.157;
 set_real_ip_from 198.50.128.237;
 set_real_ip_from 198.58.107.53;
 set_real_ip_from 198.96.155.3;
-set_real_ip_from 198.98.48.192;
 set_real_ip_from 198.98.48.20;
 set_real_ip_from 198.98.48.33;
 set_real_ip_from 198.98.49.203;
@@ -781,6 +780,7 @@ set_real_ip_from 2001:67c:6ec:203:192:42:116:219;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:220;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:221;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5513;
+set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5514;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5515;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5517;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5518;
@@ -1190,6 +1190,7 @@ set_real_ip_from 2a03:4000:6:4015:8841:50ff:fe0d:719c;
 set_real_ip_from 2a03:4000:6:614:d803:40ff:fec3:832a;
 set_real_ip_from 2a03:4000:66:15:18a0:6bff:fe90:3147;
 set_real_ip_from 2a03:4000:66:d88:6469:50ff:fe0b:98a8;
+set_real_ip_from 2a03:4000:6:b136::4;
 set_real_ip_from 2a03:4000:6:d042:5440:88ff:fedd:4ae5;
 set_real_ip_from 2a03:4000:6:e047:6494:62ff:fe3f:85b8;
 set_real_ip_from 2a03:6f20:531::254;
@@ -1274,6 +1275,7 @@ set_real_ip_from 2a06:1700:0:15::1;
 set_real_ip_from 2a06:1700:0:15::2;
 set_real_ip_from 2a06:1700:0:15::3;
 set_real_ip_from 2a06:1700:0:15::4;
+set_real_ip_from 2a06:1700:0:16::1;
 set_real_ip_from 2a06:1700:0:16b::11;
 set_real_ip_from 2a06:1700:0:3c::1;
 set_real_ip_from 2a06:1700:0:50::11;
@@ -1536,6 +1538,7 @@ set_real_ip_from 31.220.98.139;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
+set_real_ip_from 37.120.188.156;
 set_real_ip_from 37.120.239.59;
 set_real_ip_from 37.187.5.192;
 set_real_ip_from 37.228.129.128;
@@ -1673,8 +1676,8 @@ set_real_ip_from 5.255.99.5;
 set_real_ip_from 5.2.67.226;
 set_real_ip_from 5.2.79.179;
 set_real_ip_from 5.2.79.190;
-set_real_ip_from 52.86.215.131;
 set_real_ip_from 5.39.25.229;
+set_real_ip_from 54.145.16.79;
 set_real_ip_from 54.224.79.94;
 set_real_ip_from 5.42.66.6;
 set_real_ip_from 5.42.80.232;
@@ -1786,7 +1789,6 @@ set_real_ip_from 91.139.160.150;
 set_real_ip_from 91.203.145.116;
 set_real_ip_from 91.206.26.26;
 set_real_ip_from 91.208.197.144;
-set_real_ip_from 91.208.75.153;
 set_real_ip_from 91.208.75.156;
 set_real_ip_from 91.208.75.178;
 set_real_ip_from 91.208.75.239;
