--- a/deny-tor_ips.conf
+++ b/deny-tor_ips.conf
@@ -5,6 +5,7 @@ deny 103.109.101.105;
 deny 103.126.161.54;
 deny 103.129.222.46;
 deny 103.163.218.11;
+deny 103.174.253.222;
 deny 103.193.179.233;
 deny 103.196.37.111;
 deny 103.208.86.5;
@@ -110,7 +111,6 @@ deny 109.70.100.69;
 deny 109.70.100.70;
 deny 109.70.100.71;
 deny 114.199.75.111;
-deny 118.163.74.160;
 deny 123.253.35.32;
 deny 125.212.241.131;
 deny 128.31.0.13;
@@ -239,7 +239,6 @@ deny 185.100.87.192;
 deny 185.100.87.250;
 deny 185.100.87.253;
 deny 185.100.87.41;
-deny 185.10.16.41;
 deny 185.106.94.195;
 deny 185.107.70.56;
 deny 185.113.128.30;
@@ -714,7 +713,6 @@ deny 2001:41d0:a:fe22::1;
 deny 2001:41d0:e:70c::1;
 deny 2001:470:1:908::9001;
 deny 2001:4b20:12:f001::105;
-deny 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 deny 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 deny 2001:620:20d0::19;
 deny 2001:620:20d0::20;
@@ -801,8 +799,8 @@ deny 2001:67c:89c:702:1ce:1ce:babe:6;
 deny 2001:67c:89c:702:1ce:1ce:babe:7;
 deny 2001:67c:89c:702:1ce:1ce:babe:8;
 deny 2001:67c:89c:702:1ce:1ce:babe:9;
+deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -934,6 +932,7 @@ deny 23.154.177.7;
 deny 23.154.177.8;
 deny 23.154.177.9;
 deny 23.155.24.6;
+deny 23.155.8.104;
 deny 23.184.48.101;
 deny 23.184.48.127;
 deny 23.184.48.128;
@@ -960,6 +959,7 @@ deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::3;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c07::f03c:94ff:fe12:513e;
+deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fbf6:11:27::3;
 deny 2602:fc24:11:26c3::1;
@@ -1237,6 +1237,7 @@ deny 2a04:52c0:102:46e0::1;
 deny 2a04:52c0:103:5acd::1;
 deny 2a04:52c0:104:31e6::1;
 deny 2a04:52c0:104:ad97::1;
+deny 2a04:52c0:104:fe02::1;
 deny 2a04:52c0:105:78fc::1;
 deny 2a04:52c0:106:394::1;
 deny 2a04:52c0:106:d219::1;
@@ -1535,6 +1536,7 @@ deny 2a12:a800:2:1:45:138:16:203;
 deny 31.129.22.65;
 deny 31.220.87.46;
 deny 31.220.98.139;
+deny 3.212.49.134;
 deny 35.0.127.52;
 deny 37.1.201.144;
 deny 37.120.166.23;
@@ -1670,6 +1672,7 @@ deny 5.255.127.36;
 deny 5.255.97.221;
 deny 5.255.98.151;
 deny 5.255.98.23;
+deny 5.255.99.108;
 deny 5.255.99.124;
 deny 5.255.99.147;
 deny 5.255.99.5;
@@ -1677,7 +1680,6 @@ deny 5.2.67.226;
 deny 5.2.79.179;
 deny 5.2.79.190;
 deny 5.39.25.229;
-deny 54.145.16.79;
 deny 54.224.79.94;
 deny 5.42.66.6;
 deny 5.42.80.232;
@@ -1789,6 +1791,7 @@ deny 91.139.160.150;
 deny 91.203.145.116;
 deny 91.206.26.26;
 deny 91.208.197.144;
+deny 91.208.75.153;
 deny 91.208.75.156;
 deny 91.208.75.178;
 deny 91.208.75.239;
@@ -1805,7 +1808,6 @@ deny 92.205.129.119;
 deny 92.205.163.226;
 deny 92.205.185.52;
 deny 92.205.31.137;
-deny 92.243.24.163;
 deny 92.246.84.133;
 deny 93.123.12.112;
 deny 93.243.56.177;
